--- a/my-app/components/CustomerInfo/CustomerInfo.css
+++ b/my-app/components/CustomerInfo/CustomerInfo.css
@@ -1,22 +1,101 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Rye&display=swap');
-
-.calculator-image{
-    height: 150px;
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+.background-forms {
+    
     display: flex;
-    background-color: rgb(255, 136, 0);
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+  }
+  
+.question-form {
+    background-image: url(https://maluvisita.com/wp-content/uploads/2018/09/Brunao-BBQ.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover; 
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+
+.box input[type="text"] {
+  height: 40px;
+  width: 100%;
+  padding: 10px;
+  font-size: 30px;
+  font-family: "Montserrat", sans-serif;
+  border: none;
+  border-bottom: 2px solid black;
+  border-top: 0px;
+  outline: 0;
+
+}
+
+.question {
+  font-size: 40px;
+  padding-bottom: 20px;
+  margin-top: 40px;
+  text-shadow: 0px 1px 14px rgba(0,0,0,0.66)
+}
+
+
+.meat-form {
+  
+  width: 100%;
+  padding: 20px;
+  border-radius: 10px;
+  font-family: 'Montserrat', sans-serif;
+  margin-left: 20px;
+  background-color: red;
+ 
+}
+
+
+.headliner{
+    margin-bottom: 60px;
+    font-size: 50px;
+    font-family: 'Bebas Neue', sans-serif;;
+    font-weight: lighter;
+    margin: 110px;;
+}
+.meat-form .headliner{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 70px;
+}
+.meat-images{
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+.meat-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     
 }
-.text-image{
-    font-family: 'Rubik Dirt';
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
+
+.meat-checkbox{
+   width: 30px;
+   height: 30px;
+   margin-top: 10px;
 }
 
+
+  
 
 
 
