--- a/my-app/components/InitialPage/InitialPage.css
+++ b/my-app/components/InitialPage/InitialPage.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 .enter-btn{
     display:flex;
     width: 500px;
@@ -20,8 +20,38 @@
     text-shadow: black 0.05em 0.05em 0.1em;
 }
 
-.enter-btn:hover{
+.click-btn:hover{
     transition: 300ms ease-in-out;
     color: white;
     font-size: 30px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+.background{
+    background-image: url(/home/vinicius/Documentos/churrascou-project/my-app/src/assets/aproxime-se-com-uma-deliciosa-comida-asiatica.jpg);
+    background-repeat: no-repeat; 
+    background-position: center center;
+    background-size: 100%;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.div-inicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat';
+    font-weight: 900;
+    font-size: 80px;
+}
+.title{
+        color: white;
+        text-shadow: black 0.1em 0.1em 0.2em;
 }
