--- a/my-app/components/CustomerInfo/CustomerInfo.css
+++ b/my-app/components/CustomerInfo/CustomerInfo.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Rye&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -29,10 +29,11 @@
 }
 
 .box input[type="text"] {
-  height: 40px;
+  height: 80px;
   width: 100%;
   padding: 10px;
-  font-size: 30px;
+ 
+  font-size: 50px;
   font-family: "Montserrat", sans-serif;
   border: none;
   border-bottom: 2px solid black;
@@ -42,57 +43,18 @@
 }
 
 .question {
-  font-size: 40px;
+  font-size: 60px;
   padding-bottom: 20px;
   margin-top: 40px;
   text-shadow: 0px 1px 14px rgba(0,0,0,0.66)
 }
 
-
-.meat-form {
-  
-  width: 100%;
-  padding: 20px;
-  border-radius: 10px;
-  font-family: 'Montserrat', sans-serif;
-  margin-left: 20px;
-  background-color: red;
- 
-}
-
-
 .headliner{
-    margin-bottom: 60px;
-    font-size: 50px;
-    font-family: 'Bebas Neue', sans-serif;;
-    font-weight: lighter;
-    margin: 110px;;
-}
-.meat-form .headliner{
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 70px;
-}
-.meat-images{
-    width: 300px;
-    border: 2px solid black;
-    border-radius: 10px;
-}
-.meat-box{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    
+  font-size: 60px;
+  text-shadow: 2px 2px 12px rgba(0,0,0,0.57);
 }
 
-.meat-checkbox{
-   width: 30px;
-   height: 30px;
-   margin-top: 10px;
-}
+
 
 
   
