--- a/my-app/components/Meat-form/meat-form.css
+++ b/my-app/components/Meat-form/meat-form.css
@@ -1,25 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
-.meat-image{
-    width: 450px;
-    height: 350px;
-    border-radius: 10px;
-    border: 1px solid black;
-
-}
-.meat-box{
+.meat-item{
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-    padding: 50px;
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
     font-family: 'Bebas Neue';
-    font-size: 50px;
+    margin: 20px;
+    
 }
-.input-checkbox{
+.input-icon{
     width: 100px;
-    height: 50px;
-    padding:0;
-    margin: 0;
+    height: 70px;
+    margin-top: 30px;
+}
+.meat-image{
+    border-radius: 10px;
+    border: 2px solid black ;
+    width: 400px;
+    height: 300px;
 }
