--- a/my-app/components/InitialPage/InitialPage.css
+++ b/my-app/components/InitialPage/InitialPage.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 .enter-btn{
     display:flex;
-    width: 500px;
-    height: 100px;
+    width: 1000px;
+    height: 200px;
     background-color: orange;
     border-radius: 200px;
     justify-content: center;
@@ -13,17 +13,21 @@
     text-decoration: none;
     font-family: 'Montserrat';
     font-weight: bolder;
-    font-size: 40px;
+    font-size: 90px;
     box-shadow: 0px 5px 20px orange;
     border-color: transparent;
     transition: 300ms ease-in-out;
     text-shadow: black 0.05em 0.05em 0.1em;
+    margin-top: 50px;
 }
 
-.click-btn:hover{
+.enter-btn:hover{
     transition: 300ms ease-in-out;
     color: white;
-    font-size: 30px;
+    font-size: 50px;
+}
+.enter-btn:active{
+    border: 10px solid black;
 }
 
 *{
@@ -54,4 +58,5 @@
 .title{
         color: white;
         text-shadow: black 0.1em 0.1em 0.2em;
+        font-size: 200px;
 }
