--- a/my-app/components/CustomerInfo/CustomerInfo.css
+++ b/my-app/components/CustomerInfo/CustomerInfo.css
@@ -5,6 +5,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat';
 }
 .background-forms {
     
@@ -12,7 +13,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
+
     background-color: #e53434;
 }
   
@@ -21,65 +22,79 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover; 
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    font-size: 80px;
     font-family: 'Montserrat', sans-serif;
     color: white;
 }
 
-.box input[type="text"] {
-  height: 80px;
-  width: 100%;
-  padding: 10px;
- 
-  font-size: 50px;
+.input-container input{
+  height: 50px;
+  width: 1000px;
+  margin: 20px;
+  font-weight: bolder;
+  font-size: 70px;
   font-family: "Montserrat", sans-serif;
   border: none;
   border-bottom: 2px solid black;
   border-top: 0px;
   outline: 0;
-
+  padding: 20px;
 }
-
-.question {
-  font-size: 60px;
-  padding-bottom: 20px;
-  margin-top: 40px;
-  text-shadow: 0px 1px 14px rgba(0,0,0,0.66)
+.input-container{
+  margin: 20px;
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
 }
 
 .headliner{
-  font-size: 60px;
-  text-shadow: 2px 2px 12px rgba(0,0,0,0.57);
+  font-size: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-.result{
-  padding: 200px 500px;
-  font-size: 50px;
-  font-family: 'Bebas Neue';
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  gap: 60px;
 
   
-
+.button-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.result-container{
+.result{
   margin-top: 100px;
-  border-radius: 27px;
-background: linear-gradient(145deg, #ffffff, #e6e6e6);
-box-shadow:  11px 11px 11px #a6a6a6,
-             -11px -11px 11px #ffffff;
-             display: flex;
-             align-items: center;
-             flex-direction: column;
-             justify-content: center;
-             font-size: 80px;
-             font-family: 'Bebas Neue';
-             padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 20px;
+  
 }
 
+.result li{
+  margin-top: 20px;
+  width: calc(33.33% - 50px);
+  margin-left: 30px;
+  font-size: 70px;
+  font-family: 'Bebas Neue';
+}
+.result ul{
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  align-items: center;
+}
 
 
   
