--- a/my-app/components/Meat-formList/meat-formList.css
+++ b/my-app/components/Meat-formList/meat-formList.css
@@ -2,10 +2,8 @@
 
 
 .meat-items{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 10px;
-
+    display: flex;
+    flex-direction: row;
 }
 
  
@@ -15,7 +13,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     
     
 }
@@ -37,7 +34,7 @@
     text-transform: uppercase;
     text-decoration: none;
     font-family: 'Bebas Neue';
-  
+    margin: 80px;
     font-size: 90px;
     box-shadow: 0px 5px 5px orange;
     border-color: transparent;
