--- a/src/components/CustomerInfo/CustomerInfo.css
+++ b/src/components/CustomerInfo/CustomerInfo.css
@@ -6,99 +6,202 @@
   padding: 0;
 }
 
-.background-forms {
+@media screen and (min-width: 768px) {
+  .background-forms {
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
-  background-color: #e53434;
+    background-color: #e53434;
+  }
+
+  h2 {
+    font-family: 'Montserrat';
+    margin-bottom: 30px;
+  }
+
+  .question-form {
+    background-image: url(https://maluvisita.com/wp-content/uploads/2018/09/Brunao-BBQ.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 50px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+  }
+
+  .input-container input {
+    height: 40px;
+    width: 1000px;
+    margin: 20px;
+    font-weight: bolder;
+    font-size: 40px;
+    font-family: "Montserrat", sans-serif;
+    border: none;
+    border-bottom: 2px solid black;
+    border-top: 0px;
+    outline: 0;
+    padding: 20px;
+  }
+
+  .input-container {
+    margin: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+  }
+
+  .headliner {
+    font-size: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+
+  .button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .result {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 20px;
+
+  }
+
+  .result li {
+    margin-top: 20px;
+    width: calc(33.33% - 50px);
+    margin-left: 30px;
+    font-size: 50px;
+    font-family: 'Bebas Neue';
+  }
+
+  .result ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    align-items: center;
+  }
 }
 
-h2 {
-  font-family: 'Montserrat';
-  margin-bottom: 30px;
-}
+@media screen and (max-width: 767px) {
+  .background-forms {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #e53434;
+    width: 100%;
+  }
 
-.question-form {
-  background-image: url(https://maluvisita.com/wp-content/uploads/2018/09/Brunao-BBQ.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-size: 50px;
-  font-family: 'Montserrat', sans-serif;
-  color: white;
-}
+  h2 {
+    font-family: 'Montserrat';
+    margin-bottom: 30px;
+    display: flex;
+    text-align: center;
+  }
 
-.input-container input {
-  height: 40px;
-  width: 1000px;
-  margin: 20px;
-  font-weight: bolder;
-  font-size: 40px;
-  font-family: "Montserrat", sans-serif;
-  border: none;
-  border-bottom: 2px solid black;
-  border-top: 0px;
-  outline: 0;
-  padding: 20px;
-}
+  .question-form {
+    background-image: url(https://maluvisita.com/wp-content/uploads/2018/09/Brunao-BBQ.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+  }
 
-.input-container {
-  margin: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bolder;
-}
+  .input-container input {
+    height: 5px;
+    width: 220px;
+    margin: 10px;
+    font-weight: bolder;
+    font-size: 13px;
+    font-family: "Montserrat", sans-serif;
+    border: none;
+    border-bottom: 2px solid black;
+    border-top: 0px;
+    outline: 0;
+    padding: 10px;
+  }
 
-.headliner {
-  font-size: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
+  .input-container {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+  }
 
+  .headliner {
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    text-align: center;
+  }
 
-.button-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
+  .button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 
-.result {
-  margin-top: 100px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  .result {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 
-  padding: 20px;
+    padding: 10px;
 
-}
+  }
 
-.result li {
-  margin-top: 20px;
-  width: calc(33.33% - 50px);
-  margin-left: 30px;
-  font-size: 50px;
-  font-family: 'Bebas Neue';
-}
+  .result li {
+    margin-top: 20px;
+    width: calc(33.33% - 50px);
+    margin-left: 30px;
+    font-size: 15px;
+    font-family: 'Bebas Neue';
+    text-align: center;
+  }
 
-.result ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  align-items: center;
+  .result ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    align-items: center;
+  }
 }
