--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+@media screen and (min-width: 768px) {
+    .logo-image {
+        width: 200px;
+    }
 
-.logo-image{
-    width:200px;
+    .header-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: 100px;
+        font-family: 'Black Ops One', sans-serif;
+        font-weight: 1000;
+        font-size: 70px;
+    }
 }
 
-.header-items{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 100px;
-    font-family: 'Black Ops One', sans-serif;
-    font-weight: 1000;
-    font-size: 70px;
+@media screen and (max-width: 767px) {
+    .logo-image {
+        width: 100px;
+    }
+
+    .header-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: 10px;
+        font-family: 'Black Ops One', sans-serif;
+        font-weight: 1000;
+        font-size: 18px;
+    }
+
 }
