--- a/src/components/InitialPage/InitialPage.css
+++ b/src/components/InitialPage/InitialPage.css
@@ -1,70 +1,145 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@media screen and (min-width: 768px) {
+    .enter-btn {
+        display: flex;
+        width: 600px;
+        height: 140px;
+        background-color: orange;
+        border-radius: 200px;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-family: 'Montserrat';
+        font-weight: bolder;
+        font-size: 60px;
+        box-shadow: 0px 5px 20px orange;
+        border-color: transparent;
+        transition: 300ms ease-in-out;
+        text-shadow: black 0.05em 0.05em 0.1em;
+        margin-top: 50px;
+    }
 
-.enter-btn {
-    display: flex;
-    width: 600px;
-    height: 140px;
-    background-color: orange;
-    border-radius: 200px;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: 'Montserrat';
-    font-weight: bolder;
-    font-size: 60px;
-    box-shadow: 0px 5px 20px orange;
-    border-color: transparent;
-    transition: 300ms ease-in-out;
-    text-shadow: black 0.05em 0.05em 0.1em;
-    margin-top: 50px;
+    .enter-btn:hover {
+        transition: 300ms ease-in-out;
+        color: white;
+        font-size: 40px;
+    }
+
+    .enter-btn:active {
+        border: 10px solid black;
+    }
+
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    .background {
+        background-image: url(https://www.sabornamesa.com.br/media/k2/items/cache/7b98703f48b0025160f2b9b5aad2a874_XL.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 100%;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .div-inicio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Montserrat';
+        font-weight: 900;
+        font-size: 60px;
+    }
+
+    .title {
+        color: white;
+        text-shadow: black 0.1em 0.1em 0.2em;
+        font-size: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
-.enter-btn:hover {
-    transition: 300ms ease-in-out;
-    color: white;
-    font-size: 40px;
-}
+@media screen and (max-width: 767px) {
+    .enter-btn {
+        display: flex;
+        width: 300px;
+        height: 70px;
+        background-color: orange;
+        border-radius: 200px;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-family: 'Montserrat';
+        font-weight: bolder;
+        font-size: 30px;
+        box-shadow: 0px 5px 20px orange;
+        border-color: transparent;
+        transition: 300ms ease-in-out;
+        text-shadow: black 0.05em 0.05em 0.1em;
+        margin-top: 50px;
+    }
 
-.enter-btn:active {
-    border: 10px solid black;
-}
+    .enter-btn:hover {
+        transition: 300ms ease-in-out;
+        color: white;
+        font-size: 40px;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-}
+    .enter-btn:active {
+        border: 10px solid black;
+    }
 
-.background {
-    background-image: url(https://www.sabornamesa.com.br/media/k2/items/cache/7b98703f48b0025160f2b9b5aad2a874_XL.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100%;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    * {
+        margin: 0;
+        padding: 0;
+    }
 
-}
+    .background {
+        background-image: url(https://www.sabornamesa.com.br/media/k2/items/cache/7b98703f48b0025160f2b9b5aad2a874_XL.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-.div-inicio {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Montserrat';
-    font-weight: 900;
-    font-size: 60px;
-}
+    }
 
-.title {
-    color: white;
-    text-shadow: black 0.1em 0.1em 0.2em;
-    font-size: 130px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .div-inicio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Montserrat';
+        font-weight: 900;
+        font-size: 30px;
+        width: cover;
+    }
+
+    .title {
+        color: white;
+        text-shadow: black 0.1em 0.1em 0.2em;
+        font-size: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+    }
+
 }
