--- a/src/components/Meat-form/meat-form.css
+++ b/src/components/Meat-form/meat-form.css
@@ -1,26 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+@media screen and (min-width: 768px) {
+    .meat-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 40px;
+        font-family: 'Bebas Neue';
+        margin: 20px;
 
-.meat-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 40px;
-    font-family: 'Bebas Neue';
-    margin: 20px;
+    }
 
+    .input-icon {
+        width: 300px;
+        height: 70px;
+        margin-top: 30px;
+    }
+
+    .meat-image {
+        border-radius: 10px;
+        border: 2px solid black;
+        width: 300px;
+        height: 200px;
+    }
 }
 
-.input-icon {
-    width: 300px;
-    height: 70px;
-    margin-top: 30px;
-}
+@media screen and (max-width: 767px) {
+    .meat-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        font-family: 'Bebas Neue';
+        margin: 5px;
 
-.meat-image {
-    border-radius: 10px;
-    border: 2px solid black;
-    width: 300px;
-    height: 200px;
+    }
+
+    .input-icon {
+        width: 200px;
+        height: 50px;
+        margin-top: 30px;
+    }
+
+    .meat-image {
+        border-radius: 10px;
+        border: 2px solid black;
+        width: 120px;
+        height: 80px;
+    }
 }
