--- a/src/components/Meat-formList/meat-formList.css
+++ b/src/components/Meat-formList/meat-formList.css
@@ -1,54 +1,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+@media screen and (min-width: 768px) {
+    .meat-items {
+        display: flex;
+        flex-direction: row;
+    }
 
-.meat-items {
-    display: flex;
-    flex-direction: row;
+
+    .meat-container {
+        margin-top: 100px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+    }
+
+    .meat-title {
+        font-family: 'Bebas Neue';
+        font-size: 80px;
+        padding-bottom: 100px;
+    }
+
+    .button {
+        display: flex;
+        width: 300px;
+        height: 120px;
+        background-color: orange;
+        border-radius: 51px;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-family: 'Bebas Neue';
+        margin: 80px;
+        font-size: 60px;
+        box-shadow: 0px 5px 5px orange;
+        border-color: transparent;
+        transition: 300ms ease-in-out;
+        text-shadow: black 0.03em 0.03em 0.05em;
+    }
+
+    .button:hover {
+        transition: 300ms ease-in-out;
+        color: white;
+        font-size: 40px;
+    }
+
+    .button:active {
+        border: 5px solid black;
+    }
 }
 
+@media screen and (max-width: 767px) {
+    .meat-items {
 
-.meat-container {
-    margin-top: 100px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5px;
+    }
 
+    .meat-container {
+        margin-top: 100px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-}
+    .meat-title {
+        font-family: 'Bebas Neue';
+        font-size: 40px;
+        padding-bottom: 50px;
+    }
 
-.meat-title {
-    font-family: 'Bebas Neue';
-    font-size: 80px;
-    padding-bottom: 100px;
-}
+    .button {
+        display: flex;
+        width: 100px;
+        height: 40px;
+        background-color: orange;
+        border-radius: 51px;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-family: 'Bebas Neue';
+        margin: 40px;
+        font-size: 30px;
+        box-shadow: 0px 5px 5px orange;
+        border-color: transparent;
+        transition: 300ms ease-in-out;
+        text-shadow: black 0.03em 0.03em 0.05em;
+    }
 
-.button {
-    display: flex;
-    width: 300px;
-    height: 120px;
-    background-color: orange;
-    border-radius: 51px;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: 'Bebas Neue';
-    margin: 80px;
-    font-size: 60px;
-    box-shadow: 0px 5px 5px orange;
-    border-color: transparent;
-    transition: 300ms ease-in-out;
-    text-shadow: black 0.03em 0.03em 0.05em;
-}
+    .button:hover {
+        transition: 300ms ease-in-out;
+        color: white;
+        font-size: 30px;
+    }
 
-.button:hover {
-    transition: 300ms ease-in-out;
-    color: white;
-    font-size: 40px;
-}
-
-.button:active {
-    border: 5px solid black;
+    .button:active {
+        border: 5px solid black;
+    }
 }
