--- a/src/components/Meat-form/meat-form.css
+++ b/src/components/Meat-form/meat-form.css
@@ -42,6 +42,10 @@
         width: 200px;
         height: 50px;
         margin-top: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
     }
 
     .meat-image {
