--- a/src/components/CustomerInfo/CustomerInfo.css
+++ b/src/components/CustomerInfo/CustomerInfo.css
@@ -28,7 +28,7 @@
     background-position: center center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
