--- a/src/components/InitialPage/InitialPage.css
+++ b/src/components/InitialPage/InitialPage.css
@@ -67,6 +67,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-basis: 0;
+        flex-grow: 1;
+        text-align: center;
     }
 }
 
@@ -112,7 +115,7 @@
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
-        height: 100vh;
+        height: 1000px;
         width: 100vw;
         display: flex;
         align-items: center;
